src/main/java/soma/test/waggle/error/exception/NoConversationException.java
package soma.test.waggle.error.exception;

public class NoConversationException extends RuntimeException{

    public NoConversationException(String message){
        super(message);
    }
}
